# neuralzoo

./: .dockerignore  .env.example  .gitignore  Justfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: Dockerfile  main.py  state.py
api/data/: loader.py
api/ml/: inference.py  model.py
api/routers/: health.py  metrics.py  predict.py  sample.py
front/: Dockerfile  app.py  config.py  utils.py
front/pages/: metrics.py
models/: best_cnn.pth  experiments_report.md  metrics.json  metrics_resnet.json
models/experiments/augmentation_v1/: config.json  metrics.json
models/experiments/augmentation_v2/: config.json  metrics.json
models/experiments/augmentation_v2_wd/: config.json  metrics.json
models/experiments/baseline_100/: config.json  metrics.json
models/experiments/baseline_75/: config.json  metrics.json
models/experiments/combined_lr/: config.json  metrics.json
models/experiments/combined_ls/: config.json  metrics.json
notebooks/: 01_exploration.ipynb  02_modelisation.ipynb  03_resnet.ipynb
scripts/: notice.md  tune.py
src/: evaluate.py  train.py  utils.py
src/models/: cnn.md  cnn.py  mlp.py
tests/: conftest.py  test_health.py  test_metrics.py  test_predict.py  test_sample.py
veille/: veille_CNN.md  veille_MLP.md
